<resources>
    <string name="app_name">LaBombaV2</string>
    <string name="start_play">Comenzar</string>
    <string name="instructions">¿Cómo jugar?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="penalty_name">Castigo</string>
    <string name="next">Siguiente</string>
    <string name="players_name">Jugadores</string>
    <string name="hint_name_penalty">Nombre del castigo</string>
    <string name="add_penalty">Botón para agregar un castigo</string>
    <string name="add_penalty_title">Agrega un nuevo castigo</string>
    <string name="hint_txt_penalty">Castigo</string>
    <string name="add_button">Agregar</string>
    <string name="error_empty_penalty">Ingrese un castigo</string>
    <string name="error_length_short">Texto muy corto</string>
    <string name="title_alert">¡ALERTA!</string>
    <string name="message_delete_penalty">¿Seguro que deseas eliminar el castigo?</string>
    <string name="action_positive">Confirmar</string>
    <string name="action_negative">Cancelar</string>
    <string name="add_player">Botón para agregar un jugador</string>
    <string name="hint_name_player">Nombre del jugador</string>
    <string name="add_player_title">Agrega un nuevo jugador</string>
    <string name="hint_txt_player">Jugador</string>
    <string name="error_empty_player">Ingrese un jugador</string>
    <string name="edit">Editar\n</string>
    <string name="delete">Eliminar</string>
    <string name="edit_button">Editar</string>
    <string name="hint_no_players">No creaste ningún jugador.</string>
    <string name="message_delete_player">¿Seguro que deseas eliminar el jugador?</string>
    <string name="hint_no_penalties">No creaste ningún castigo.</string>
    <string name="topics_name">Temas</string>
    <string name="instruction_penalty">Agrega un castigo para el jugador que pierda</string>
    <string name="instruction_players">Agrega a dos o más jugadores</string>
    <string name="instruction_time">Determina el tiempo para la bomba</string>
    <string name="instruction_game">Responde correctamente y pasa la bomba antes que explote</string>
    <string name="instruction_topics">Selecciona mínimo tres temas para empezar a jugar con tus amigos</string>
    <string name="add_topic">Botón para agregar un tema</string>
    <string name="hint_no_topics">Debes crear un tema, por ejemplo: "Nombres de personas que contengan la letra E"</string>
    <string name="hint_name_topic">Nombre del tema</string>
    <string name="add_topic_title">Agrega un nuevo tema</string>
    <string name="hint_txt_topic">Tema</string>
    <string name="error_empty_topic">Ingrese un tema</string>
    <string name="hint_indicator_page">1</string>
    <string name="message_delete_topic">¿Seguro que deseas eliminar el tema?</string>
    <string name="timer_name">Tiempo de bomba</string>
    <string name="title_time_seg">Tiempo de bomba: Seg.</string>
    <string name="start_game">¡A jugar!</string>
    <string name="text_30sec">30</string>
    <string name="text_45sec">45</string>
    <string name="text_60sec">60</string>
    <string name="text_90sec">90</string>
    <string name="exit">Salir</string>
    <string name="text_init_timer">0:00</string>
    <string name="text_description_play">Iniciar tiempo de bomba</string>
    <string name="text_label_topic">Tema:</string>
    <string name="text_description_next">Ir al siguiente ajuste de la partida</string>
    <string name="text_alert_players">Deber agregar 2 o más jugadores para iniciar la partida.</string>
    <string name="text_alert_topics">Debe seleccionar 5 o más temas para iniciar la partida.</string>
    <string name="titleRounds">Ronda N°</string>
    <string name="message_exit_game">¿Estás seguro que deseas terminar la partida?</string>
    <string name="results_title">Resultados</string>
    <string name="go_to_home">Ir al inicio</string>
    <string name="rematch">¡Revancha!</string>
    <string name="hint_points">0</string>
    <string name="message_loser">%1$s perdiste!!</string>
    <string name="message_tie">!Es un empate!</string>
    <string name="action_back">¡Presiona de nuevo para salir!</string>
    <string name="select_loser_title">Selecciona un perdedor:</string>
    <string name="title_connection_error">Conexión a internet necesaria</string>
    <string name="message_connection_required">Necesitas una conexión a internet para configurar tu perfil y descargar los recursos del juego.</string>
    <string name="action_retry">Reintentar</string>
    <string name="message_offline">Estás jugando sin conexión. Los cambios se sincronizarán después.</string>
    <string name="action_confirm">Confirmar</string>
    <string name="text_loading">Cargando datos…</string>
    <string name="message_exit_settings">Si sales ahora se perderán los ajustes, ¿Deseas salir?</string>
</resources>