<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controllers.dialogs.AddTopicBottomSheet">

    <LinearLayout
        android:id="@+id/bshAddTopic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <!-- Drag handle para accesibilidad -->
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_common"
            android:paddingBottom="@dimen/padding_xlarge">
            <!--Contenido del bottom sheet-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_topic_title"
                android:textColor="?colorPrimary"
                android:textAppearance="?attr/textAppearanceTitleMedium"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_common">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTopic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_txt_topic"
                    android:textColor="?colorPrimary"
                    android:inputType="textPersonName|textCapSentences"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddTopic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_button"
                style="@style/ButtonOutlineStyle"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="@dimen/padding_common"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditTopic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_button"
                style="@style/ButtonOutlineStyle"
                android:layout_gravity="end|bottom"
                android:visibility="gone"
                android:layout_marginTop="@dimen/padding_common"/>
        </LinearLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>